# qt-scintilla-editor

./: .gitignore  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  buffer.cpp  buffer.h  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  icondb.cpp  icondb.h  main.cpp  qscintillaeditor.cpp  qscintillaeditor.h  qscintillaeditor.ui  qt-scintilla-editor.pro  qtscitntillaeditor.qrc  util.cpp  util.h
forms/: aboutdialog.ui  encodingdialog.ui  findreplacedialog.ui  languagedialog.ui  qscintillaeditor.ui
include/: aboutdialog.h  buffer.h  colorscheme.h  configuration.h  encoding.h  encodingdialog.h  findreplacedialog.h  icondb.h  language.h  languagedialog.h  qscintillaeditor.h  styleinfo.h  util.h  version.h
resources/: qtscitntillaeditor.qrc
resources/colorschemes/: default.xml  monokai.xml
resources/conf/: encodings.xml  languages.xml
src/: aboutdialog.cpp  buffer.cpp  colorscheme.cpp  configuration.cpp  encoding.cpp  encodingdialog.cpp  findreplacedialog.cpp  icondb.cpp  language.cpp  languagedialog.cpp  main.cpp  qscintillaeditor.cpp  styleinfo.cpp  util.cpp
